# ROS2-Python-

./: README.md
src/face_detect_interfaces/: CMakeLists.txt  package.xml
src/face_detect_interfaces/srv/: FaceDetector.srv
src/service_python_detect/: package.xml  setup.cfg  setup.py
src/service_python_detect/service_python_detect/: face_detect_client_node.py  face_detect_node.py  learn_face_detect.py
