cmake_minimum_required(VERSION 3.8)
project(face_detect_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)

# cmake函数,来自依赖包rosidl_default_generators,用于将自定义的服务接口文件(.srv文件)转换成对应的c++和python模块
rosidl_generate_interfaces(${PROJECT_NAME}
  "srv/FaceDetector.srv" # 自定义的服务接口文件
  DEPENDENCIES sensor_msgs # 指定自定义的服务接口文件中使用的依赖包
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
